Fix HTML encoding issues and clean up code

--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
 
       <div class="details-content">
         <div class="flower-divider">
-          <img src="FLOR_1.PNG" alt="Flor" />
-          <img src="FLOR_2.PNG" alt="Flor" />
+          <img src="./FLOR_1.PNG" alt="Flor" />
+          <img src="./FLOR_2.PNG" alt="Flor" />
         </div>
         <section class="details">
           <p class="date">10ENE26</p>
@@ -512,4 +512,5 @@
       });
     </script>
   </body>
+
 </html>
