Fix HTML structure and correct typos

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
         align-items: center;
         justify-content: center;
         margin-bottom: 1vh;
+        overflow: hidden;
       }
 
       .flower-divider img {
@@ -206,16 +207,16 @@
 
       .flower-divider img:first-child {
         /* FLOR_1.PNG */
-        left: -150px;
+        left: -100px;
         top: 50%;
         transform: translateY(-50%) rotate(110deg);
       }
 
       .flower-divider img:last-child {
         /* FLOR_2.PNG */
-        right: -150px;
-        top: 10%;
-        transform: translateY(-50%) rotate(-120deg);
+        right: -100px;
+        top: 50%;
+        transform: translateY(-50%) rotate(30deg);
       }
       /* --- FIN CSS (Flores) --- */
 
@@ -314,9 +315,10 @@
       </div>
 
       <div class="details-content">
+        
         <div class="flower-divider">
-          <img src="./FLOR_1.PNG" alt="Flor" />
-          <img src="./FLOR_2.PNG" alt="Flor" />
+          <img src="/invitacion-de-boda/FLOR_1.PNG" alt="Flor" />
+          <img src="/invitacion-de-boda/FLOR_2.PNG" alt="Flor" />
         </div>
         <section class="details">
           <p class="date">10ENE26</p>
@@ -512,5 +514,4 @@
       });
     </script>
   </body>
-
 </html>
