--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
       <div class="details-content">
         
         <div class="flower-divider">
-          <img src="/invitacion-de-boda/FLOR_1.PNG" alt="Flor" />
-          <img src="/invitacion-de-boda/FLOR_2.PNG" alt="Flor" />
+          <img src="./flor_1.ng" alt="Flor 1" />
+          <img src="./flor_2.png" alt="Flor 2" />
         </div>
         <section class="details">
           <p class="date">10ENE26</p>
@@ -515,3 +515,4 @@
     </script>
   </body>
 </html>
+
