--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
         align-items: center;
         justify-content: center;
         margin-bottom: 1vh;
-        overflow: hidden;
       }
 
       .flower-divider img {
@@ -207,16 +206,16 @@
 
       .flower-divider img:first-child {
         /* FLOR_1.PNG */
-        left: -100px;
+        left: -150px;
         top: 50%;
         transform: translateY(-50%) rotate(110deg);
       }
 
       .flower-divider img:last-child {
         /* FLOR_2.PNG */
-        right: -100px;
-        top: 50%;
-        transform: translateY(-50%) rotate(30deg);
+        right: -150px;
+        top: 10%;
+        transform: translateY(-50%) rotate(-120deg);
       }
       /* --- FIN CSS (Flores) --- */
 
@@ -315,10 +314,9 @@
       </div>
 
       <div class="details-content">
-        
         <div class="flower-divider">
-          <img src="./flor_1.ng" alt="Flor 1" />
-          <img src="./flor_2.png" alt="Flor 2" />
+          <img src="flor_1.png" alt="Flor" />
+          <img src="flor_2.png" alt="Flor" />
         </div>
         <section class="details">
           <p class="date">10ENE26</p>
@@ -515,4 +513,3 @@
     </script>
   </body>
 </html>
-
