--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       }
 
       /* === FIN DE LA CORRECCIÓN CSS === */
+
     </style>
   </head>
   <body class="w-full font-fraunces font-normal text-[#333] leading-relaxed">
@@ -87,7 +88,7 @@
       </div>
     </div>
     <main class="relative z-[10]">
-      <section class="invitation-hero flex flex-col items-center justify-center h-screen w-screen relative py-[4vh] px-[5vw] gap-[2vh]">
+      <section class="invitation-hero flex flex-col items-center justify-center h-[90vh] w-screen relative py-[4vh] px-[5vw] gap-[2vh]">
         <div class="hero-content flex flex-col items-center justify-center gap-[2vh] w-full relative z-[10]">
           <header>
             <p class="uppercase tracking-[0.1em] text-[clamp(1rem,3vw,2rem)]">¡Dimos el "sí"!</p>
@@ -104,8 +105,8 @@
         </div>
       </section>
 
-      <section class="details-page flex flex-col items-center min-h-screen w-screen relative gap-[2vh]">
-        <div class="details-page-content pt-[25vh] px-[5vw] flex flex-col items-center justify-center gap-[2vh] w-full relative z-[10]">
+      <section class="details-page flex flex-col items-center min-h-screen w-screen relative gap-[2vh] pt-[25vh]">
+        <div class="details-page-content px-[5vw] flex flex-col items-center justify-center gap-[2vh] w-full relative z-[10]">
           <section class="details text-center">
             <p class="date font-normal tracking-[0.05em] mb-[1vh] text-[clamp(2.5rem,5vw,2.8rem)]">10ENE26</p>
             <p class="time uppercase tracking-[0.05em] leading-[1.3] text-[clamp(1.2rem,3vw,1.3rem)]">tres de la tarde</p>
@@ -138,7 +139,7 @@
       </section>
     </main>
     <script>
-document.addEventListener("DOMContentLoaded", function () {
+      document.addEventListener("DOMContentLoaded", function () {
         // --- INICIO DE LA LÓGICA DE SCROLL ACTUALIZADA ---
 
         // 1. Registrar ScrollTrigger
@@ -235,8 +236,7 @@ document.addEventListener("DOMContentLoaded", function () {
           const parallaxTl = gsap.timeline({
             scrollTrigger: {
               trigger: ".invitation-hero",
-              start: "top top", // <-- ARREGLADO: Vuelve a ser "top top"
-              end: "bottom top",
+              start: "t30%",
               scrub: 1,
               pin: true, // <-- ARREGLADO: Vuelve a tener "pin: true"
               pinSpacing: true, // Dejamos el "empuje" por defecto
@@ -250,44 +250,56 @@ document.addEventListener("DOMContentLoaded", function () {
             ease: "power2.in",
           };
 
-          parallaxTl
-            .to(".hero-content header", finalProps)
-            .to(".names h1:first-child", finalProps, "<0.25")
-            .to(".names span", finalProps, "<0.25")
-            .to(".names h1:last-child", finalProps, "<0.25")
-            .to(".hero-content .request", finalProps, "<0.25");
+          parallaxTl.to(".hero-content header", finalProps).to(".names h1:first-child", finalProps, "<0.25").to(".names span", finalProps, "<0.25").to(".names h1:last-child", finalProps, "<0.25").to(".hero-content .request", finalProps, "<0.25");
         }
 
-         gsap.from(".flower-divider img", {
-  scrollTrigger: {
-    trigger: ".details-page", // Se dispara con la sección 2
-    start: "top 80%",       // Cuando la sección está 20% visible
-    toggleActions: "play none none none", // Solo se reproduce una vez
-    // scrub: false, // (Ya no se usa scrub)
-  },
-  duration: 1.2, // <-- LA ANIMACIÓN DURA 1.2 SEGUNDOS
-  yPercent: 40,  // El movimiento que ya teníamos
-  opacity: 0,
-  ease: "power2.out",
-  stagger: 0.2,    // 0.2s de retraso entre la primera y la segunda flor
-});
+        // 3. ANIMACIÓN DE LA SECCIÓN 2 (¡¡UNIFICADA Y CORREGIDA!!)
+        // Esta es la animación que solapa la segunda sección
+        const detailsTl = gsap.timeline({
+          scrollTrigger: {
+            trigger: ".details-page-content", // <-- ¡ESTA ES LA SOLUCIÓN!
+            start: "top 30%",
+            end: "bottom 20",
+            scrub: 2.5,
+            markers: false,
 
-// ANIMACIÓN 2: EL TEXTO
-// Se dispara un poquito después que las flores.
-gsap.from(".details-page-content .details > p, .details-page-content footer > p", {
-  scrollTrigger: {
-    trigger: ".details-page", // Se dispara con la sección 2
-    start: "top 75%",       // Un poco después que las flores (80% vs 75%)
-    toggleActions: "play none none none", // Solo se reproduce una vez
-  },
-  duration: 1, // <-- LA ANIMACIÓN DURA 1 SEGUNDO
-  y: 70,
-  opacity: 0,
-  ease: "power3.out",
-  stagger: 0.15, // La cascada entre cada <p>
-});
+            // markers: true, // <-- DESCOMENTA ESTO PARA VER LAS GUÍAS
+          },
+        });
 
-});
+        // PASO 1: Animar las flores (CON PARALLAX)
+        detailsTl.from(
+          ".flower-divider img:first-child",
+          {
+            yPercent: 280, // Comienza ARRIBA (para que baje)
+            opacity: 0,
+            ease: "power2.out",
+          },
+          0.2
+        );
+
+        detailsTl.from(
+          ".flower-divider img:last-child",
+          {
+            yPercent: 100, // Comienza ABAJO (para que suba)
+            opacity: 0,
+            ease: "power2.out",
+          },
+          0.1
+        );
+
+        // PASO 2: Animar el texto escalonado
+        detailsTl.from(
+          ".details-page-content .details > p, .details-page-content footer > p",
+          {
+            opacity: 0,
+            y: 70, // Anima "desde" 30px más abajo
+            stagger: 0.3, // 0.1s de retraso entre cada <p>
+            ease: "power3.out",
+          },
+          0.5
+        ); // Inicia después de las flores
+      }); // <-- FIN DEL DOMContentLoaded
     </script>
   </body>
 </html>
