--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <img src="boda4.jpg" alt="Recuerdo 5" />
             </div>
             <div class="spotlight-img">
-              <img src="boda5.jpg" alt="Recuerdo 6" />
+              <img src="boda5.JPG" alt="Recuerdo 6" />
             </div>
             <div class="spotlight-img">
               <img src="boda6.png" alt="Recuerdo 7" />
@@ -745,7 +745,7 @@ function createParallaxAnimation() {
               start: "top top",
               scrub: 1,
               pin: true,
-              pinSpacing: false,
+              pinSpacing: true,
               end: "+=100%",       
             },
           });
