--- a/index.html
+++ b/index.html
@@ -626,7 +626,8 @@
               scrub: 1,
               pin: true,
               pinSpacing: false,
-              //end: "+=100%",
+              end: "+=100%",
+              pinType: "transform",
             },
           });
 
