Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
           pin: true,
           pinSpacing: true,
           scrub: 1,
+          pinType: "transform",
 
           onUpdate: (self) => {
             const progress = self.progress;
@@ -609,6 +610,7 @@
           pin: ".envelope-sticky-container",
           scrub: 1,
           animation: envelopeTimeline,
+          pinType: "transform",
         });
 
         // Hero intro + parallax
