--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <img src="boda4.jpg" alt="Recuerdo 5" />
             </div>
             <div class="spotlight-img">
-              <img src="boda5.jpg" alt="Recuerdo 6" />
+              <img src="boda5.png" alt="Recuerdo 6" />
             </div>
             <div class="spotlight-img">
               <img src="boda6.png" alt="Recuerdo 7" />
@@ -971,3 +971,4 @@
     </div>
   </body>
 </html>
+
