Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </section>
 
       <div class="envelope-wrapper relative h-[250vh] w-full">
-        <div class="envelope-sticky-container sticky top-0 w-full overflow-hidden" style="height: 100lvh">
+        <div class="envelope-sticky-container sticky top-0 w-full overflow-hidden">
           <div class="envelope-back absolute bottom-0 z-10 w-full h-auto">
             <img src="sobre_atras.png" alt="Sobre" class="w-full h-auto" />
           </div>
@@ -970,3 +970,4 @@
     </div>
   </body>
 </html>
+
