--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
           trigger: ".envelope-wrapper",
           start: "top top",
           end: "bottom bottom",
-          pin: ".envelope-sticky-container",+
+          pin: ".envelope-sticky-container",
           fastScrollEnd: true,
           scrub: 1, // Suaviza la animación
 
