--- a/index.html
+++ b/index.html
@@ -203,15 +203,44 @@
         -webkit-mask-composite: destination-out;
         mask-composite: exclude;
       }
+      .is-locked {
+        overflow: hidden !important;
+        height: 100vh !important;
+        /* Esta regla previene el "pull-to-refresh" en iOS y Android */
+        overscroll-behavior: contain;
+      }
+      html.is-locked,
+      body.is-locked {
+        overflow: hidden !important;
+        height: 100vh !important;
+        overscroll-behavior: contain;
+      }
+      #audio-overlay {
+  /* Anula todos los gestos táctiles que puedan iniciar el scroll */
+  touch-action: none; 
+  /* Evita que se pueda seleccionar el texto mientras la capa esté activa */
+  user-select: none;
+}
     </style>
   </head>
   <body class="w-full font-fraunces font-normal text-[#333] leading-relaxed">
     <div id="audio-overlay" class="fixed inset-0 z-[9999] bg-white/90 backdrop-blur-sm flex flex-col items-center justify-center p-8 text-center">
+      <img src="flor_1.png" alt="Flor decorativa" class="absolute top-[4%] left-[60%] h-[300px] w-auto opacity-70 rotate-[240deg] sm:block" />
+
+      <img src="flor_2.png" alt="Flor decorativa" class="absolute top-[5%] right-[-40%] h-[350px] w-auto opacity-70 rotate-[-120deg] sm:block" />
+
+      <img src="flor_1.png" alt="Flor decorativa" class="absolute top-[7%] left-[-50%] h-[580px] w-auto opacity-60 rotate-[110deg] sm:block" />
+
+      <img src="flor_2.png" alt="Flor decorativa" class="absolute top-[0%] left-[-30%] h-[520px] w-auto opacity-50 rotate-[75deg] sm:block" />
+
+      <img src="flor_1.png" alt="Flor decorativa" class="absolute bottom-[2%] right-[-65%] h-[620px] w-auto opacity-70 rotate-[170deg] sm:block" />
+
+      <img src="flor_1.png" alt="Flor decorativa" class="absolute bottom-[10%] left-[-20%] h-[300px] w-auto opacity-70 rotate-[10deg] sm:block" />
+
+      <img src="flor_2.png" alt="Flor decorativa" class="absolute bottom-[-10%] right-[-40%] h-[500px] w-auto opacity-70 rotate-[-30deg] sm:block" />
       <h2 class="font-playfair text-6xl text-[#333] mb-8">¡Bienvenidos!</h2>
       <h3 class="font-montserrat font-bold leading-[1.2] mb-7 text-3xl">Hace dos años nuestros caminos se cruzaron, y hoy estamos listos para decir si, para siempre.</h3>
-      <button id="audio-start-button" class="bg-[#f96d41] text-white font-montserrat font-bold py-3 px-8 rounded-full shadow-lg transition-transform transform hover:scale-105">
-        Acceder a la Invitación
-    </button>
+      <button id="audio-start-button" class="bg-[#f96d41] text-white font-montserrat font-bold py-3 px-8 rounded-full shadow-lg transition-transform transform hover:scale-105">Acceder a la Invitación</button>
     </div>
     <audio id="musica-fondo" src="boda.mp3"></audio>
     <div class="fixed-background fixed inset-0 z-[1] pointer-events-none">
@@ -444,6 +473,8 @@
 
           // 1. Oculta el overlay
           audioOverlay.style.display = "none";
+          document.documentElement.classList.remove("is-locked");
+          document.body.classList.remove("is-locked");
 
           // 2. Inicia el scroll (Lenis está detenido desde el principio)
           lenis.start();
