--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </style>
   </head>
   <body class="w-full font-fraunces font-normal text-[#333] leading-relaxed">
-    <div id="audio-overlay" class="fixed inset-0 z-[9999] bg-white/90 backdrop-blur-sm flex flex-col items-center justify-center p-8 text-center">
+    <div id="audio-overlay" class="fixed inset-0 z-[9999] bg-white/90 backdrop-blur-sm flex flex-col items-center justify-center p-8 text-center hidden
       <img src="flor_1.png" alt="Flor decorativa" class="absolute top-[-0%] left-[60%] h-[300px] w-auto opacity-70 rotate-[240deg] sm:block" />
 
       <img src="flor_2.png" alt="Flor decorativa" class="absolute top-[-15%] right-[-30%] h-[350px] w-auto opacity-70 rotate-[-120deg] sm:block" />
@@ -238,8 +238,8 @@
       <img src="flor_1.png" alt="Flor decorativa" class="absolute bottom-[2%] left-[-20%] h-[300px] w-auto opacity-70 rotate-[10deg] sm:block" />
 
       <img src="flor_2.png" alt="Flor decorativa" class="absolute bottom-[-15%] right-[-35%] h-[400px] w-auto opacity-70 rotate-[-10deg] sm:block" />
-      <h2 class="font-playfair text-6xl text-[#333] mb-8">¡Bienvenidos!</h2>
-      <h3 class="font-montserrat font-bold leading-[1.2] mb-7 text-3xl">Hace dos años nuestros caminos se cruzaron, y hoy estamos listos para decir si, para siempre.</h3>
+      <h2 class="font-playfair font-bold text-6xl text-[#333] mb-8">¡Bienvenidos!</h2>
+      <h3 class="font-montserrat font-bold leading-[1.1] mb-7 text-2xl">Hace diez años nuestros caminos se cruzaron, y hoy estamos listos para decir si, para siempre.</h3>
       <button id="audio-start-button" class="bg-[#f96d41] text-white font-montserrat font-bold py-3 px-8 rounded-full shadow-lg transition-transform transform hover:scale-105">Acceder a la Invitación</button>
     </div>
     <audio id="musica-fondo" src="boda.mp3"></audio>
@@ -277,9 +277,9 @@
             <p class="uppercase tracking-[0.1em] text-[clamp(1.3rem,3vw,2rem)]">¡Nos Casamos!</p>
           </header>
           <div class="names">
-            <h1 class="font-playfair font-normal text-center leading-[1.1] text-[clamp(5.5rem,9vw,7.2rem)]">María</h1>
-            <span class="font-monsieur font-normal block text-center leading-none text-[clamp(3.5rem,6vw,4rem)] m-0">Y</span>
-            <h1 class="font-playfair font-normal text-center leading-[1.1] text-[clamp(5.5rem,9vw,7.2rem)]">Kevind</h1>
+            <h1 class="font-playfair font-bold text-center leading-[1.1] text-[clamp(5.5rem,9vw,7.2rem)]">María</h1>
+            <span class="font-monsieur font-bold block text-center leading-none text-[clamp(3.5rem,6vw,4rem)] m-0">Y</span>
+            <h1 class="font-playfair font-bold text-center leading-[1.1] text-[clamp(5.5rem,9vw,7.2rem)]">Kevind</h1>
           </div>
           <p class="request text-center mt-[2vh] leading-[1.2] text-[clamp(1.5rem,4vw,1.6rem)]">
             Queremos que seas testigo<br />
@@ -290,29 +290,29 @@
 
       <section class="spotlight">
         <div class="spotlight-header">
-          <h1 class="font-playfair">Nuestros Momentos</h1>
+          <h1 class="font-playfair font-bold] ">Nuestros Momentos</h1>
         </div>
         <div class="spotlight-images">
           <div class="spotlight-img">
-            <img src="boda.png" alt="Recuerdo 1" />
+            <img src="boda.webp" alt="Recuerdo 1" />
           </div>
           <div class="spotlight-img">
-            <img src="boda1.jpg" alt="Recuerdo 2" />
+            <img src="boda1.webp" alt="Recuerdo 2" />
           </div>
           <div class="spotlight-img">
-            <img src="boda2.jpg" alt="Recuerdo 3" />
+            <img src="boda2.webp" alt="Recuerdo 3" />
           </div>
           <div class="spotlight-img">
-            <img src="boda3.jpg" alt="Recuerdo 4" />
+            <img src="boda3.webp" alt="Recuerdo 4" />
           </div>
           <div class="spotlight-img">
-            <img src="boda4.jpg" alt="Recuerdo 5" />
+            <img src="boda4.webp" alt="Recuerdo 5" />
           </div>
           <div class="spotlight-img">
-            <img src="boda5.png" alt="Recuerdo 6" />
+            <img src="boda5.webp" alt="Recuerdo 6" />
           </div>
           <div class="spotlight-img">
-            <img src="boda6.png" alt="Recuerdo 7" />
+            <img src="boda6.webp" alt="Recuerdo 7" />
           </div>
         </div>
       </section>
@@ -320,19 +320,19 @@
       <div class="envelope-wrapper relative h-[250vh] w-full">
         <div class="envelope-sticky-container sticky top-0 w-full overflow-hidden" style="height: 100lvh">
           <div class="envelope-back absolute bottom-0 z-10 w-full h-auto">
-            <img src="sobre_atras.png" alt="Sobre" class="w-full h-auto" />
+            <img src="sobre_atras.webp" alt="Sobre" class="w-full h-auto" />
           </div>
 
-          <section class="final-details envelope-content absolute bottom-0 z-20 w-[99%] left-1/2 -translate-x-1/2 min-h-screen text-[#333] flex flex-col items-center gap-[2vh] py-20" style="background-image: url('carta.jpg'); background-size: cover; background-position: center">
+          <section class="final-details envelope-content absolute bottom-0 z-20 w-[99%] left-1/2 -translate-x-1/2 min-h-screen text-[#333] flex flex-col items-center gap-[0.5vh] py-12" style="background-image: url('carta.webp'); background-size: cover; background-position: center">
             <div class="details-page-content px-[5vw] flex flex-col items-center justify-center gap-[2vh] w-full relative z-[10]">
               <section class="details text-center">
-                <p class="date font-normal tracking-[0.05em] mb-[1vh] text-[clamp(4.5rem,5vw,2.8rem)]">10ENE26</p>
-                <p class="time uppercase tracking-[0.05em] leading-[1.3] text-[clamp(3.2rem,3vw,1.3rem)]">3:00 pm</p>
+                <p class="date font-normal tracking-[0.05em] mb-[1vh] leading-[1] text-[clamp(4.5rem,5vw,2.8rem)]">10ENE26<br>3:00 pm</p>
+                <p class="time uppercase tracking-[0.05em] leading-[1.3] text-[clamp(3.2rem,3vw,1.3rem)]"></p>
                 <div id="countdown" class="text-center my-8 w-full bg-white p-4 rounded-lg">
                   <p class="tracking-[0.05em] text-2xl mb-1">Faltan:</p>
                   <div class="flex justify-center gap-4 sm:gap-8 text-center mt-0 p-2">
                     <div>
-                      <span id="days" class="font-playfair text-4xl sm:text-6xl block w-16 sm:w-24">00</span>
+                      <span id="days" class="font-playfair text-3xl sm:text-5xl block w-16 sm:w-24">00</span>
                       <span class="block text-xs uppercase tracking-widest mt-2">Días</span>
                     </div>
                     <div>
@@ -350,14 +350,14 @@
                   </div>
                 </div>
 
-                <p class="venue tracking-[0.05em] leading-[1.3] text-[clamp(1.rem,3vw,1.3rem)] mt-[0.5vh]">
+                <p class="venue tracking-[0.05em] leading-[1.1] text-[clamp(1.5rem,3vw,1.5rem)] mt-0">
                   Centro de recepciones PK2<br />
                   Av. los paredones 201<br />
                   primera cuadra Nazca
                 </p>
               </section>
 
-              <footer class="font-montserrat text-center mt-[2vh] leading-[1.2]">
+              <footer class="font-montserrat text-center mt-[1vh] leading-[1.2]">
                 <p class="tracking-[0.05em] text-[clamp(0.9rem,2.3vmin,1.1rem)]">Recepción: A continuación de la ceremonia</p>
                 <p class="tracking-[0.05em] text-[clamp(0.9rem,2.3vmin,1.1rem)]">Código de Vestimenta: Elegante Cóctel</p>
 
@@ -415,7 +415,7 @@
             </div>
           </section>
           <div class="envelope-front absolute bottom-0 z-30 w-full h-auto pointer-events-none">
-            <img src="sobre_adelante.png" alt="Sobre" class="w-full h-auto" />
+            <img src="sobre_adelante.webp" alt="Sobre" class="w-full h-auto" />
           </div>
         </div>
       </div>
@@ -1099,4 +1099,3 @@
     </div>
   </body>
 </html>
-
