--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
         width: auto; /* Ajustamos a "auto" para que se ajuste al texto */
         max-width: 80%; /* Aseguramos que no sea muy ancho */
         padding: 20px 40px; /* Espacio alrededor del texto */
+        display: flex;        /* <-- NUEVO */
+        align-items: center;    /* <-- NUEVO: Centra verticalmente */
+        justify-content: center; /* <-- NUEVO: Asegura el centrado horizontal */
+        flex-direction: column;
 
         /* Glassmorphism: Fondo semi-transparente y Blur */
         background-color: rgba(227, 202, 202, 0.25); /* Fondo oscuro suave */
@@ -176,33 +180,8 @@
         -ms-overflow-style: none; /* Para IE y Edge */
         scrollbar-width: none; /* Para Firefox */
       }
-      #countdown {
-        /* Separación interna */
-        padding: 15px;
 
-        /* Aseguramos que el contenido del contador esté dentro del flujo */
-        position: relative;
-
-        /* Borde dorado de 2px que respeta la forma de la máscara */
-        box-shadow: 0 0 0 50px gold;
-
-        /* Borde redondeado */
-        border-radius: 15px;
-
-        /* Propiedad personalizada para el tamaño del corte de las esquinas */
-        --corner-size-counter: 15px;
-
-        /* El fondo es transparente para que se vea la imagen de la carta */
-
-        /* Aplicamos la máscara para las esquinas invertidas */
-        -webkit-mask: 
-    /* El cuerpo principal del contenedor */ linear-gradient(white, white) padding-box, /* Esquinas radiales para el corte */ radial-gradient(var(--corner-size-counter) at 0 0, transparent 0, transparent var(--corner-size-counter), white var(--corner-size-counter)),
-          radial-gradient(var(--corner-size-counter) at 100% 0, transparent 0, transparent var(--corner-size-counter), white var(--corner-size-counter)), radial-gradient(var(--corner-size-counter) at 0 100%, transparent 0, transparent var(--corner-size-counter), white var(--corner-size-counter)),
-          radial-gradient(var(--corner-size-counter) at 100% 100%, transparent 0, transparent var(--corner-size-counter), white var(--corner-size-counter));
-
-        -webkit-mask-composite: destination-out;
-        mask-composite: exclude;
-      }
+     
       .is-locked {
         overflow: hidden !important;
         height: 100vh !important;
@@ -216,15 +195,15 @@
         overscroll-behavior: contain;
       }
       #audio-overlay {
-  /* Anula todos los gestos táctiles que puedan iniciar el scroll */
-  touch-action: none; 
-  /* Evita que se pueda seleccionar el texto mientras la capa esté activa */
-  user-select: none;
-}
+        /* Anula todos los gestos táctiles que puedan iniciar el scroll */
+        touch-action: none;
+        /* Evita que se pueda seleccionar el texto mientras la capa esté activa */
+        user-select: none;
+      }
     </style>
   </head>
   <body class="w-full font-fraunces font-normal text-[#333] leading-relaxed">
-    <div id="audio-overlay" class="fixed inset-0 z-[9999] bg-white/90 backdrop-blur-sm flex flex-col items-center justify-center p-8 text-center hidden
+    <div id="audio-overlay" class="fixed inset-0 z-[9999] bg-white/90 backdrop-blur-sm flex flex-col items-center justify-center p-8 text-center hidden">
       <img src="flor_1.png" alt="Flor decorativa" class="absolute top-[-0%] left-[60%] h-[300px] w-auto opacity-70 rotate-[240deg] sm:block" />
 
       <img src="flor_2.png" alt="Flor decorativa" class="absolute top-[-15%] right-[-30%] h-[350px] w-auto opacity-70 rotate-[-120deg] sm:block" />
@@ -235,7 +214,7 @@
 
       <img src="flor_1.png" alt="Flor decorativa" class="absolute bottom-[-35%] right-[-35%] h-[520px] w-auto opacity-70 rotate-[270deg] sm:block" />
 
-      <img src="flor_1.png" alt="Flor decorativa" class="absolute bottom-[2%] left-[-20%] h-[300px] w-auto opacity-70 rotate-[10deg] sm:block" />
+      <img src="flor_1.png" alt="Flor decorativa" class="absolute bottom-[2%] left-[-20%] h-[v300px] w-auto opacity-70 rotate-[10deg] sm:block" />
 
       <img src="flor_2.png" alt="Flor decorativa" class="absolute bottom-[-15%] right-[-35%] h-[400px] w-auto opacity-70 rotate-[-10deg] sm:block" />
       <h2 class="font-playfair font-bold text-6xl text-[#333] mb-8">¡Bienvenidos!</h2>
@@ -290,7 +269,7 @@
 
       <section class="spotlight">
         <div class="spotlight-header">
-          <h1 class="font-playfair font-bold] ">Nuestros Momentos</h1>
+          <h1 class="font-playfair tracking-[0.05em] font-bold">Nuestro Recuerdos</h1>
         </div>
         <div class="spotlight-images">
           <div class="spotlight-img">
@@ -323,46 +302,57 @@
             <img src="sobre_atras.webp" alt="Sobre" class="w-full h-auto" />
           </div>
 
-          <section class="final-details envelope-content absolute bottom-0 z-20 w-[99%] left-1/2 -translate-x-1/2 min-h-screen text-[#333] flex flex-col items-center gap-[0.5vh] py-12" style="background-image: url('carta.webp'); background-size: cover; background-position: center">
+          <section class="final-details envelope-content absolute bottom-0 z-20 w-[99%] left-1/2 -translate-x-1/2 min-h-screen text-[#333] flex flex-col items-center gap-[0.5vh] pt-20 pb-8" style="background-image: url('carta.webp'); background-size: cover; background-position: center">
             <div class="details-page-content px-[5vw] flex flex-col items-center justify-center gap-[2vh] w-full relative z-[10]">
               <section class="details text-center">
-                <p class="date font-normal tracking-[0.05em] mb-[1vh] leading-[1] text-[clamp(4.5rem,5vw,2.8rem)]">10ENE26<br>3:00 pm</p>
-                <p class="time uppercase tracking-[0.05em] leading-[1.3] text-[clamp(3.2rem,3vw,1.3rem)]"></p>
-                <div id="countdown" class="text-center my-8 w-full bg-white p-4 rounded-lg">
-                  <p class="tracking-[0.05em] text-2xl mb-1">Faltan:</p>
-                  <div class="flex justify-center gap-4 sm:gap-8 text-center mt-0 p-2">
-                    <div>
-                      <span id="days" class="font-playfair text-3xl sm:text-5xl block w-16 sm:w-24">00</span>
-                      <span class="block text-xs uppercase tracking-widest mt-2">Días</span>
-                    </div>
-                    <div>
-                      <span id="hours" class="font-playfair text-4xl sm:text-6xl block w-16 sm:w-24">00</span>
-                      <span class="block text-xs uppercase tracking-widest mt-2">Horas</span>
-                    </div>
-                    <div>
-                      <span id="minutes" class="font-playfair text-4xl sm:text-6xl block w-16 sm:w-24">00</span>
-                      <span class="block text-xs uppercase tracking-widest mt-2">Minutos</span>
-                    </div>
-                    <div>
-                      <span id="seconds" class="font-playfair text-4xl sm:text-6xl block w-16 sm:w-24">00</span>
-                      <span class="block text-xs uppercase tracking-widest mt-2">Segundos</span>
-                    </div>
-                  </div>
+                <p class="date tracking-[0.05em] mb-[1vh] leading-[1] font-bold text-[clamp(3.5rem,5vw,2.8rem)]">10ENE26<br />3:00 pm</p>
+                <p class="time uppercase tracking-[0.05em] leading-[1.1] text-[clamp(3.2rem,3vw,1.3rem)]"></p>
+               <div id="countdown" class="text-center my-8 w-full p-5" style="background-image: url('contenedor-contador.webp'); background-size: cover; background-position: center;">
+                  <p class="tracking-[0.05em] text-amber-900 text-2xl mb-0">Faltan:</p>
+
+                  <div class="flex justify-center text-center -mt-1 p-2">
+  
+  <div>
+    <span id="days" class="font-playfair text-3xl sm:text-5xl block w-16 sm:w-24 text-amber-900">00</span>
+    <span class="block text-xs tracking-widest mt-2 text-amber-900">Días</span>
+  </div>
+
+  <span class="font-playfair text-3xl sm:text-5xl text-amber-900">:</span> 
+
+  <div>
+    <span id="hours" class="font-playfair text-3xl sm:text-5xl block w-16 sm:w-24 text-amber-900">00</span>
+    <span class="block text-xs tracking-widest mt-2 text-amber-900">Horas</span>
+  </div>
+
+  <span class="font-playfair text-3xl sm:text-5xl text-amber-900">:</span>
+
+  <div>
+    <span id="minutes" class="font-playfair text-3xl sm:text-5xl block w-16 sm:w-24 text-amber-900">00</span>
+    <span class="block text-xs tracking-widest mt-2 text-amber-900">Minutos</span>
+  </div>
+
+  <span class="font-playfair text-3xl sm:text-5xl text-amber-900">:</span>
+
+  <div>
+    <span id="seconds" class="font-playfair text-3xl sm:text-5xl block w-16 sm:w-24 text-amber-900">00</span>
+    <span class="block text-xs tracking-widest mt-2 text-amber-900">Segundos</span>
+  </div>
+</div>
                 </div>
 
-                <p class="venue tracking-[0.05em] leading-[1.1] text-[clamp(1.5rem,3vw,1.5rem)] mt-0">
+                <p class="venue tracking-[0.05em] leading-[1.1] text-[clamp(1.2rem,3vw,1.5rem)] mt-0">
                   Centro de recepciones PK2<br />
-                  Av. los paredones 201<br />
-                  primera cuadra Nazca
+                  Av. los paredones 201 
+                  1° cuadra Nazca
                 </p>
               </section>
 
               <footer class="font-montserrat text-center mt-[1vh] leading-[1.2]">
-                <p class="tracking-[0.05em] text-[clamp(0.9rem,2.3vmin,1.1rem)]">Recepción: A continuación de la ceremonia</p>
-                <p class="tracking-[0.05em] text-[clamp(0.9rem,2.3vmin,1.1rem)]">Código de Vestimenta: Elegante Cóctel</p>
+                <p class="tracking-[0.05em] font-bold text-[clamp(0.9rem,2.3vmin,1.1rem)]">Recepción: A continuación de la ceremonia</p>
+                <p class="tracking-[0.05em] font-bold text-[clamp(0.9rem,2.3vmin,1.1rem)]">Código de Vestimenta: Elegante Cóctel</p>
 
                 <p class="rsvp normal-case tracking-normal mt-[1.5vh] leading-[1.2] text-[clamp(0.9rem,3vw,1.1rem)]">
-                  <strong class="font-normal uppercase">R.S.V.P.:</strong> Agradecemos confirmar su asistencia
+                  <strong class="font-bold uppercase">R.S.V.P.:</strong> Agradecemos confirmar su asistencia
                   <br />
                   antes del 15/12/2025
                   <a href="tel:+51977993344" class="phone-link text-inherit underline"></a>
@@ -370,15 +360,15 @@
                 <div class="flex justify-center gap-8 mt-8">
                   <div class="flex flex-col items-center text-center">
                     <a href="https://wa.link/yuka9p">
-                      <button id="btn-rsvp-si" class="bg-white text-gray-800 font-montserrat font-semibold uppercase tracking-wider px-10 py-3 rounded-full transition-all duration-300 transform hover:scale-105">Sí</button>
-                      <p class="font-montserrat text-xs tracking-widest mt-2 w-24">¡Ahí estaré! con Uds.</p>
+                      <button id="btn-rsvp-si" class="bg-amber-100 text-gray-800 font-montserrat font-semibold uppercase tracking-wider px-10 py-3 rounded-full transition-all duration-300 transform hover:scale-105">Sí</button>
+                      <p class="font-montserrat font-bold text-xs tracking-widest mt-2 w-24">¡Ahí estaré! con Uds.</p>
                     </a>
                   </div>
 
                   <div class="flex flex-col items-center text-center">
                     <a href="https://wa.link/6mpk62">
-                      <button id="btn-rsvp-no" class="bg-white text-gray-800 font-montserrat font-semibold uppercase tracking-wider px-10 py-3 rounded-full transition-all duration-300 transform hover:scale-105">No</button>
-                      <p class="font-montserrat text-xs tracking-widest mt-2 w-32">Lo siento, no podré</p>
+                      <button id="btn-rsvp-no" class="bg-amber-100 text-gray-800 font-montserrat font-semibold uppercase tracking-wider px-10 py-3 rounded-full transition-all duration-300 transform hover:scale-105">No</button>
+                      <p class="font-montserrat font-bold text-xs tracking-widest mt-2 w-32">Lo siento, no podré</p>
                     </a>
                   </div>
                 </div>
@@ -387,12 +377,8 @@
                   Nuestra mayor alegría es que nos acompañes en<br />
                   este día. si deseas un detalle extra, tendremos
                 </p>
-                <p class="gifts normal-case tracking-normal mt-[1.5vh] leading-[1.5] text-[clamp(0.9rem,3vw,1.1rem)]">
-                  Si además deseas tener un detalle,<br />
-                  puedes ver
-                  <a class="text-inherit">nuestra lista de sugerencias</a>.
-                </p>
-                <button id="btn-abrir-regalos" class="bg-white text-gray-800 font-bold uppercase tracking-widest px-8 py-3 rounded transition-transform transform hover:scale-105 mt-10">Ver Lista de Regalos</button>
+                <p class="gifts normal-case tracking-normal mt-[1.5vh] leading-[1.5] text-[clamp(0.9rem,3vw,1.1rem)]">Si además deseas tener un detalle puedes ver</p>
+                <button id="btn-abrir-regalos" class="bg-amber-100 text-gray-800 font-bold uppercase tracking-widest px-8 py-3 rounded transition-transform transform hover:scale-105 mt-5">Nuestra Lista de Regalos</button>
 
                 <div id="modal-regalos" class="fixed inset-0 bg-black bg-opacity-75 z-[5000] flex justify-center items-center p-4 hidden text-black">
                   <div id="modal-contenido" data-lenis-prevent class="bg-white font-montserrat text-gray-800 p-6 rounded-lg shadow-xl w-full max-w-lg max-h-[80vh] flex flex-col">
