--- a/index.html
+++ b/index.html
@@ -214,19 +214,19 @@
   </head>
   <body class="w-full font-fraunces font-normal text-[#333] leading-relaxed">
     <div id="audio-overlay" class="fixed inset-0 z-[9999] bg-white/90 backdrop-blur-sm flex flex-col items-center justify-center p-8 text-center ">
-      <img src="flor_1.png" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-20vw] xl:left-[-10vw] top-[10%] -translate-y-1/2 rotate-[110deg]" />
+      <img src="flor_1.webp" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-20vw] xl:left-[-10vw] top-[10%] -translate-y-1/2 rotate-[110deg]" />
 
-      <img src="flor_2.png" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,980px)] w-auto left-[-30vw] xl:left-[-13vw] top-[100%] -translate-y-1/2 rotate-[20deg]" />
+      <img src="flor_2.webp" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,980px)] w-auto left-[-30vw] xl:left-[-13vw] top-[100%] -translate-y-1/2 rotate-[20deg]" />
 
-      <img src="flor_1.png" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,780px)] w-auto right-[-30vw] xl:right-[-15vw] top-[90%] -translate-y-1/2 -rotate-[40deg]" />
+      <img src="flor_1.webp" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,780px)] w-auto right-[-30vw] xl:right-[-15vw] top-[90%] -translate-y-1/2 -rotate-[40deg]" />
 
-      <img src="flor_2.png" alt="Flor decorativa" class="absolute w-auto top-[60%] left-[-50%] h-[520px]   opacity-50 rotate-[110deg] xl:h-[300px] top-[-25%] left-[90vw] rotate-[90deg] sm:block" />
+      <img src="flor_2.webp" alt="Flor decorativa" class="absolute w-auto top-[60%] left-[-50%] h-[520px]   opacity-50 rotate-[110deg] xl:h-[300px] top-[-25%] left-[90vw] rotate-[90deg] sm:block" />
 
-      <img src="flor_1.png" alt="Flor decorativa" class="absolute w-auto bottom-[-35%] right-[-35%] h-[520px]   opacity-70 rotate-[270deg] xl:h-[100px] top-[-15%] left-[70vw] rotate-[0deg] sm:block" />
+      <img src="flor_1.webp" alt="Flor decorativa" class="absolute w-auto bottom-[-35%] right-[-35%] h-[520px]   opacity-70 rotate-[270deg] xl:h-[100px] top-[-15%] left-[70vw] rotate-[0deg] sm:block" />
 
-      <img src="flor_1.png" alt="Flor decorativa" class="absolute w-auto bottom-[2%] left-[-20%] h-[v300px]   opacity-70 rotate-[10deg] xl:h-[400px] top-[80%] left-[70vw] rotate-[90deg] sm:block" />
+      <img src="flor_1.webp" alt="Flor decorativa" class="absolute w-auto bottom-[2%] left-[-20%] h-[v300px]   opacity-70 rotate-[10deg] xl:h-[400px] top-[80%] left-[70vw] rotate-[90deg] sm:block" />
 
-      <img src="flor_2.png" alt="Flor decorativa" class="absolute w-auto bottom-[-15%] right-[-35%] h-[400px]   opacity-70 rotate-[-10deg] xl:h-[700px] top-[-25%] left-[75vw] rotate-[210deg] sm:block" />
+      <img src="flor_2.webp" alt="Flor decorativa" class="absolute w-auto bottom-[-15%] right-[-35%] h-[400px]   opacity-70 rotate-[-10deg] xl:h-[700px] top-[-25%] left-[75vw] rotate-[210deg] sm:block" />
       <h2 class="font-playfair font-bold text-6xl text-[#333] mb-8">¡Bienvenidos!</h2>
       <h3 class="font-montserrat font-bold leading-[1.1] mb-7 text-2xl">Hace diez años nuestros caminos se cruzaron, y hoy estamos listos para decir si, para siempre.</h3>
       <button id="audio-start-button" class="bg-[#f96d41] text-white font-montserrat font-bold py-3 px-8 rounded-full shadow-lg transition-transform transform hover:scale-105">Acceder a la Invitación</button>
@@ -255,10 +255,11 @@
       <span class="initial-k fixed font-playfair font-normal text-[#333] opacity-[0.08] z-[5] leading-none text-[clamp(30rem,50vmin,40rem)] bottom-[-5%] left-[15%] -translate-x-1/2">K</span>
 
      <div class="flower-divider fixed inset-0 z-[10]">
-        <img src="flor_1.webp" alt="Flor" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-20vw] xl:left-[-10vw] top-[10%] -translate-y-1/2 rotate-[110deg]" />
-        <img src="flor_2.webp" alt="Flor" class="absolute h-[clamp(380px,40vw,780px)] w-auto right-[-30vw] xl:right-[-15vw] top-[90%] -translate-y-1/2 -rotate-[40deg]" />
-        <img src="flor_1.webp" alt="Flor" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-30vw] xl:left-[70vw] top-[110%] -translate-y-1/2 rotate-[-40deg]" />
-      </div>
+        <img src="flor_1.webp" alt="Flor1" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-20vw] xl:left-[-10vw] top-[10%] -translate-y-1/2 rotate-[110deg]" />
+        <img src="flor_2.webp" alt="Flor2" class="absolute h-[clamp(380px,40vw,780px)] w-auto right-[-30vw] xl:right-[-15vw] top-[90%] -translate-y-1/2 -rotate-[40deg]" />
+        <img src="flor_1.webp" alt="Flor3" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-30vw] xl:left-[70vw] top-[110%] -translate-y-1/2 rotate-[-40deg]" />
+       <img src="FLOR_1.webp" alt="Flor4" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-30vw] xl:left-[70vw] top-[110%] -translate-y-1/2 rotate-[-40deg]" /> 
+     </div>
     </div>
     <main class="relative z-[10] w-full">
       <section class="invitation-hero flex flex-col items-center justify-center h-[90vh] w-full relative py-[4vh] px-[5vw] gap-[2vh]">
@@ -1087,3 +1088,4 @@
     </div>
   </body>
 </html>
+
