--- a/index.html
+++ b/index.html
@@ -216,17 +216,17 @@
     <div id="audio-overlay" class="fixed inset-0 z-[9999] bg-white/90 backdrop-blur-sm flex flex-col items-center justify-center p-8 text-center ">
       <img src="flor_1.webp" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-20vw] xl:left-[-10vw] top-[10%] -translate-y-1/2 rotate-[110deg]" />
 
-      <img src="flor_2.webp" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,980px)] w-auto left-[-30vw] xl:left-[-13vw] top-[100%] -translate-y-1/2 rotate-[20deg]" />
+      <img src="FLOR_2.webp" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,980px)] w-auto left-[-30vw] xl:left-[-13vw] top-[100%] -translate-y-1/2 rotate-[20deg]" />
 
       <img src="flor_1.webp" alt="Flor decorativa" class="absolute h-[clamp(380px,40vw,780px)] w-auto right-[-30vw] xl:right-[-15vw] top-[90%] -translate-y-1/2 -rotate-[40deg]" />
 
-      <img src="flor_2.webp" alt="Flor decorativa" class="absolute w-auto top-[60%] left-[-50%] h-[520px]   opacity-50 rotate-[110deg] xl:h-[300px] top-[-25%] left-[90vw] rotate-[90deg] sm:block" />
+      <img src="FLOR_2.webp" alt="Flor decorativa" class="absolute w-auto top-[60%] left-[-50%] h-[520px]   opacity-50 rotate-[110deg] xl:h-[300px] top-[-25%] left-[90vw] rotate-[90deg] sm:block" />
 
       <img src="flor_1.webp" alt="Flor decorativa" class="absolute w-auto bottom-[-35%] right-[-35%] h-[520px]   opacity-70 rotate-[270deg] xl:h-[100px] top-[-15%] left-[70vw] rotate-[0deg] sm:block" />
 
       <img src="flor_1.webp" alt="Flor decorativa" class="absolute w-auto bottom-[2%] left-[-20%] h-[v300px]   opacity-70 rotate-[10deg] xl:h-[400px] top-[80%] left-[70vw] rotate-[90deg] sm:block" />
 
-      <img src="flor_2.webp" alt="Flor decorativa" class="absolute w-auto bottom-[-15%] right-[-35%] h-[400px]   opacity-70 rotate-[-10deg] xl:h-[700px] top-[-25%] left-[75vw] rotate-[210deg] sm:block" />
+      <img src="FLOR_2.webp" alt="Flor decorativa" class="absolute w-auto bottom-[-15%] right-[-35%] h-[400px]   opacity-70 rotate-[-10deg] xl:h-[700px] top-[-25%] left-[75vw] rotate-[210deg] sm:block" />
       <h2 class="font-playfair font-bold text-6xl text-[#333] mb-8">¡Bienvenidos!</h2>
       <h3 class="font-montserrat font-bold leading-[1.1] mb-7 text-2xl">Hace diez años nuestros caminos se cruzaron, y hoy estamos listos para decir si, para siempre.</h3>
       <button id="audio-start-button" class="bg-[#f96d41] text-white font-montserrat font-bold py-3 px-8 rounded-full shadow-lg transition-transform transform hover:scale-105">Acceder a la Invitación</button>
@@ -256,7 +256,7 @@
 
      <div class="flower-divider fixed inset-0 z-[10]">
         <img src="flor_1.webp" alt="Flor1" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-20vw] xl:left-[-10vw] top-[10%] -translate-y-1/2 rotate-[110deg]" />
-        <img src="flor_2.webp" alt="Flor2" class="absolute h-[clamp(380px,40vw,780px)] w-auto right-[-30vw] xl:right-[-15vw] top-[90%] -translate-y-1/2 -rotate-[40deg]" />
+        <img src="FLOR_2.webp" alt="Flor2" class="absolute h-[clamp(380px,40vw,780px)] w-auto right-[-30vw] xl:right-[-15vw] top-[90%] -translate-y-1/2 -rotate-[40deg]" />
         <img src="flor_1.webp" alt="Flor3" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-30vw] xl:left-[70vw] top-[110%] -translate-y-1/2 rotate-[-40deg]" />
        <img src="FLOR_1.webp" alt="Flor4" class="absolute h-[clamp(380px,40vw,780px)] w-auto left-[-30vw] xl:left-[70vw] top-[110%] -translate-y-1/2 rotate-[-40deg]" /> 
      </div>
@@ -1088,4 +1088,5 @@
     </div>
   </body>
 </html>
+
 
