Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
       <img src="flor_1.webp" alt="Flor6 decorativa" class="absolute w-auto bottom-[2%] left-[-20%] h-[v300px] opacity-70 rotate-[10deg] xl:h-[400px] top-[80%] left-[70vw] rotate-[90deg] sm:block" />
 
-      <img src="flor_2.webp" alt="Flor7 decorativa" class="absolute w-auto bottom-[-15%] right-[-35%] h-[400px] opacity-70 rotate-[-10deg] xl:h-[700px] top-[-25%] left-[75vw] rotate-[210deg] sm:block" />
+      <img src="FLOR_2.webp" alt="Flor7 decorativa" class="absolute w-auto bottom-[-15%] right-[-35%] h-[400px] opacity-70 rotate-[-10deg] xl:h-[700px] top-[-25%] left-[75vw] rotate-[210deg] sm:block" />
       <h2 class="font-playfair font-bold text-6xl text-[#333] mb-8">¡Bienvenidos!</h2>
       <h3 class="font-montserrat font-bold leading-[1.1] mb-7 text-2xl">Hace diez años nuestros caminos se cruzaron, y hoy estamos listos para decir si, para siempre.</h3>
       <button id="audio-start-button" class="bg-[#f96d41] text-white font-montserrat font-bold py-3 px-8 rounded-full shadow-lg transition-transform transform hover:scale-105">Acceder a la Invitación</button>
@@ -1115,4 +1115,5 @@
     </div>
   </body>
 </html>
+
 
