--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
         </div>
       </div>
     </div>
-    <div id="admin-panel" class="fixed bottom-0 left-0 w-full bg-white p-4 shadow-lg z-[9999] hidden">
+    <div id="admin-panel" class="fixed bottom-0 left-0 w-full bg-white p-4 shadow-lg z-[9999] ">
       <h3 class="font-playfair text-lg text-black">Panel de Admin (Temporal)</h3>
       <form id="form-regalo" class="flex flex-wrap gap-4 items-end">
         <div class="flex-grow">
@@ -1115,6 +1115,7 @@
     </div>
   </body>
 </html>
+
 
 
 
